--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ html, body {
   overflow-x: hidden;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  color: rgba(255, 255, 255, 1);
 
   font-family: 'Poppins';
   font-style: normal;
@@ -21,7 +22,7 @@ html, body {
 }
 
 section {
-  min-height: 100vh;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center; 
@@ -34,19 +35,22 @@ section {
 }
 
 .container {
+  height: 100%;
   width: 100%;
-  margin: 0 auto;
-  padding: 0 auto;
+  margin-inline: auto;
+  padding-inline: 16px;
 }
 
 h2 {
-  font-weight: 400px;
+  font-weight: 400;
   font-size: 32px;
+  margin-bottom: 16px;
 }
 
 p {
   font-size: 16px;
   font-weight: 400px;
+  margin-bottom: 12px;
 
   color: #403E3B;
 }
@@ -198,13 +202,27 @@ p {
   line-height: 24px;
 }
 
+/* Frame */
+
 .frame {
   width: 100vw;
-  height: 100vh;
 
   display: flex;
   justify-content: center;
 }
+
+.frame-wrapper {
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.frame-wrapper img {
+  width: 1920px; /* фиксированная ширина, как в фигме */
+  max-width: none;
+  height: auto;
+}
+
 
 /* Process */
 
@@ -300,6 +318,7 @@ p {
   padding-top: 60px;
   padding-left: 136px;
   background-color: rgba(64, 62, 59, 1);
+  max-height: 410px;
 }
 
 .customers-block {
@@ -351,6 +370,7 @@ p {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, auto);
+  justify-content: space-between;
   
   gap: 96px;
 }
@@ -399,9 +419,8 @@ p {
 .projects-image {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 16px;
-  width: 379px;
-  height: 480px;
 }
 
 /* Team */
@@ -410,7 +429,6 @@ p {
   display: grid;
   grid-template-columns: 1fr 2fr;
   gap: 40px;
-  padding: 80px 60px;
   align-items: start;
 }
 
@@ -463,4 +481,71 @@ p {
   font-size: 0.85rem;
   color: #777;
   margin: 2px 0 0;
+}
+
+/* Footer */
+
+.footer {
+  background-color: #f7f7f7;
+  padding-block: 40px;
+  font-size: 14px;
+}
+
+.footer .container {
+  max-width: 1200px;
+  margin-inline: auto;
+  padding-inline: 16px;
+}
+
+.footer__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.footer__left {
+  max-width: 600px;
+}
+
+.footer__logo {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 12px;
+}
+
+.footer__logo span {
+  font-weight: 400;
+}
+
+.footer__text {
+  color: #555;
+  margin-bottom: 12px;
+  line-height: 1.5;
+}
+
+.footer__badge {
+  width: 60px;
+  height: auto;
+}
+
+.footer__right {
+  display: flex;
+  align-items: center;
+}
+
+.footer__socials {
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  top: 60px;
+}
+
+.footer__socials img {
+  width: 24px;
+  height: 25px;
+  display: block;
 }
