--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ html, body {
   overflow-x: hidden;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  color: rgba(255, 255, 255, 1);
+  background-color: rgba(255, 255, 255, 1);
 
   font-family: 'Poppins';
   font-style: normal;
