--- a/styles.css
+++ b/styles.css
@@ -23,15 +23,13 @@ html, body {
 
 section {
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center; 
+  box-sizing: border-box;
 }
 
 .container {
   max-width: 1440px;
-  margin-inline: auto;
-  padding-inline: 16px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 h2 {
@@ -90,7 +88,6 @@ p {
 
 .hero {
   display: flex;
-  height: 100vh;
   align-items: center;
   justify-content: space-between;
   background-color: #e9e5e2;
@@ -140,11 +137,12 @@ p {
 
 .hero-image {
   width: 50%;
+  height: 100vh;
 }
 
 .hero-image img {
-  width: 100%;
-  height: auto;
+  width: 100wv;
+  height: 100vh;
   border-radius: 0;
   object-fit: cover;
 }
@@ -156,11 +154,11 @@ p {
   flex-direction: row;
   justify-content: center;
   gap: 132px;
+  margin-top: 100px;
 }
 
 .our_firm {
   display: flex;
-  height: 100vh;
   margin-bottom: 100px;
 
   background-color: white;
@@ -307,9 +305,6 @@ p {
 .customers {
   display: flex;
   flex-direction: row;
-  gap: 132px;
-  padding-top: 60px;
-  padding-left: 136px;
   background-color: rgba(64, 62, 59, 1);
   max-height: 410px;
 }
@@ -317,12 +312,16 @@ p {
 .customers-block {
   display: flex;
   flex-direction: row;
+  gap: 132px;
+  margin-bottom: 60px;
 }
 
 .customers-textarea {
   display: flex;
   flex-direction: column;
   gap: 14px;
+  width: 460px;
+  margin-top: 65px;
 }
 
 .customers-title {
@@ -364,6 +363,7 @@ p {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, auto);
   justify-content: space-between;
+  margin-top: 60px;
   
   gap: 96px;
 }
@@ -384,24 +384,20 @@ p {
   gap: 42px;
 }
 
-.projects-title,
-.team-title {
+.projects-title{
   display: flex;
   flex-direction: column;
   justify-content: left;
-  margin-bottom: 40px;
   gap: 15px;
   line-height: 112px;
 }
 
-.projects-title h2,
-.team-title h2 {
+.projects-title h2 {
   font-size: 39px;
   line-height: 42px;
 }
 
-.projects-title p,
-.team-title p {
+.projects-title p {
   font-size: 24px;
   line-height: 30px;
 
